<resources>
    <!-- activity_test_input -->
    <string name="app_name">HexKeyboard</string>
    <string name="ime_done">単独行のテストができます。(imeOptions="actionDone")</string>
    <string name="ime_normal">単独行のテストができます。(imeOptions指定なし)</string>
    <string name="ime_singleline">単独行のテストができます。imeOptions="actionNext"</string>
    <string name="ime_multiline">複数行のテストができます。imeOptions="actionNone"</string>
    <!-- keyboard_layout -->
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="bs">⌫</string>
    <string name="enter">⏎</string>
    <string name="shift">⬆️</string>
    <string name="space">Space</string>
    <string name="left">←</string>
    <string name="right">→</string>
</resources>