<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray"
    android:columnCount="6"
    android:padding="8dp"
    android:rowCount="3">

    <!-- 1列目 -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_1"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="8dp"
        android:text="@string/_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_2"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="8dp"
        android:text="@string/_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_3"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="8dp"
        android:text="@string/_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_4"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="8dp"
        android:text="@string/_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_5"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="8dp"
        android:text="@string/_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_bs"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="8dp"
        android:text="@string/bs" />

    <!-- 2列目 -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_6"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="8dp"
        android:text="@string/_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_7"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="8dp"
        android:text="@string/_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_8"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="8dp"
        android:text="@string/_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_9"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="8dp"
        android:text="@string/_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_0"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="8dp"
        android:text="@string/_0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_enter"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="8dp"
        android:text="@string/enter" />

    <!-- 3列目 -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_A"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="8dp"
        android:text="@string/a" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_B"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="8dp"
        android:text="@string/b" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_C"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="8dp"
        android:text="@string/c" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_D"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="8dp"
        android:text="@string/d" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_E"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="8dp"
        android:text="@string/e" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_F"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="8dp"
        android:text="@string/f" />

    <!-- 4列目 -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_shift"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="8dp"
        android:text="@string/shift" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_space"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_columnSpan="3"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="8dp"
        android:text="@string/space" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cursor_left"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="8dp"
        android:text="@string/left" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cursor_right"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="8dp"
        android:text="@string/right" />

</GridLayout>